--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@ Use sticky and relative positioning
 
         <div id="sidebar">
             <h2>Navigation</h2>
+
+            <h3>List of some of my favorite games</h3>
+            <ul>
+                <li>Helldivers 2</li>
+                <li>Baldurs Gate 3</li>
+                <li>Risk of Rain 2</li>
+                <li>Hollow Knight Silksong</li>
+                <li>Titanfall 2</li>
+
+            </ul>
+
+            <h3>Two games I spent an eternity playing</h3>
+            <ul>
+                <li>Factorio</li>
+                <li>Minecraft</li>
+            </ul>
         </div>
 
         <div id="footer">
